--- a/css/components/shared/phishing-warning.css
+++ b/css/components/shared/phishing-warning.css
@@ -55,6 +55,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-/*# sourceMappingURL=phishing-warning.css.map */
+}/*# sourceMappingURL=phishing-warning.css.map */
